--- a/DataProviders/QuoteProviders.csproj
+++ b/DataProviders/QuoteProviders.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9D9E4960-B784-45A1-A7E3-B5C76708D8A3}</ProjectGuid>
+    <ProjectGuid>{C8E2E951-D2ED-4FFE-9752-3DFA62C6F086}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BidMessage</RootNamespace>
-    <AssemblyName>BidMessage</AssemblyName>
+    <RootNamespace>QuoteProviders</RootNamespace>
+    <AssemblyName>QuoteProviders</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BidMessage">
+      <HintPath>..\BidMessages\bin\Debug\BidMessage.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -37,36 +40,13 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuctionSessions.cs" />
-    <Compile Include="BidMessage.cs" />
-    <Compile Include="Bytes.cs" />
-    <Compile Include="ControlMessage.cs" />
-    <Compile Include="ControlReplyMessage.cs" />
-    <Compile Include="ControlRequestMessage.cs" />
-    <Compile Include="HeartbeatMessage.cs" />
-    <Compile Include="LoginReplyMessage.cs" />
-    <Compile Include="LoginRequestMessage.cs" />
-    <Compile Include="FunctionCodes.cs" />
+    <Compile Include="IQuoteDataListener.cs" />
+    <Compile Include="IQuoteDataProvider.cs" />
+    <Compile Include="LocalQuoteProvider.cs" />
+    <Compile Include="QuoteDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuoteDataMessage.cs" />
-    <Compile Include="QuoteFieldTags.cs" />
-    <Compile Include="QuoteMessage.cs" />
-    <Compile Include="QuoteTextMessage.cs" />
-    <Compile Include="SessionAMessage.cs" />
-    <Compile Include="SessionBMessage.cs" />
-    <Compile Include="SessionCEFHMessage.cs" />
-    <Compile Include="SessionCMessage.cs" />
-    <Compile Include="SessionDGMessage.cs" />
-    <Compile Include="SessionDMessage.cs" />
-    <Compile Include="SessionEMessage.cs" />
-    <Compile Include="SessionFMessage.cs" />
-    <Compile Include="SessionGMessage.cs" />
-    <Compile Include="SessionHMessage.cs" />
-    <Compile Include="SessionKeyReplyMessage.cs" />
-    <Compile Include="SessionKeyRequestMessage.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <Compile Include="QuoteProviderStatus.cs" />
+    <Compile Include="TcpQuoteProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
