--- a/WindowsFormsViewer/WindowsFormsViewer.csproj
+++ b/WindowsFormsViewer/WindowsFormsViewer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DataViewerForm.Designer.cs">
       <DependentUpon>DataViewerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ErrorOccurredEventArgs.cs" />
     <Compile Include="Manager.cs" />
     <Compile Include="QuoteDataReceiver.cs" />
     <Compile Include="ServerLoginForm.cs">
