Refactor and bugfixes.

--- a/WindowsFormsViewer/WindowsFormsViewer.csproj
+++ b/WindowsFormsViewer/WindowsFormsViewer.csproj
@@ -51,8 +51,8 @@
       <DependentUpon>DataViewerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ErrorOccurredEventArgs.cs" />
-    <Compile Include="Manager.cs" />
-    <Compile Include="QuoteDataReceiver.cs" />
+    <Compile Include="FormsManager.cs" />
+    <Compile Include="DataViewModel.cs" />
     <Compile Include="ServerLoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
