--- a/ConsoleViewer/ConsoleViewer.csproj
+++ b/ConsoleViewer/ConsoleViewer.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Viewer.cs" />
+    <Compile Include="ConsoleViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
