--- a/ConsoleQuoteViewer/ConsoleQuoteViewer.csproj
+++ b/ConsoleQuoteViewer/ConsoleQuoteViewer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C77402AD-5E0A-4A0C-9BEA-7DEB8AAF1FD3}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{D9CA1789-5255-4FF6-BF50-68EFB6D96ED5}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsViewer</RootNamespace>
-    <AssemblyName>WindowsFormsViewer</AssemblyName>
+    <RootNamespace>ConsoleQuoteViewer</RootNamespace>
+    <AssemblyName>ConsoleQuoteViewer</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -38,62 +38,11 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataViewerForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DataViewerForm.Designer.cs">
-      <DependentUpon>DataViewerForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ErrorOccurredEventArgs.cs" />
-    <Compile Include="FormsManager.cs" />
-    <Compile Include="DataViewModel.cs" />
-    <Compile Include="ServerLoginForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ServerLoginForm.Designer.cs">
-      <DependentUpon>ServerLoginForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SourceSelectionForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SourceSelectionForm.Designer.cs">
-      <DependentUpon>SourceSelectionForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ConsoleViewer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DataViewerForm.resx">
-      <DependentUpon>DataViewerForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ServerLoginForm.resx">
-      <DependentUpon>ServerLoginForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SourceSelectionForm.resx">
-      <DependentUpon>SourceSelectionForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
